--- a/src/app/component/product-offer/product-offer.component.html
+++ b/src/app/component/product-offer/product-offer.component.html
@@ -1,7 +1,7 @@
 <div
   class="rounded-md bg-white shadow-md max-w-80 md:max-w-max mx-auto p-6 md:pe-32 flex"
 >
-  <div class="flex flex-col gap-1">
+  <div class="flex flex-col gap-2">
     <h2 class="font-bold text-gray-950 text-xl sm:text-xl">
       {{ product().name }}
     </h2>
@@ -86,7 +86,7 @@
       </a>
     </div>
   </div>
-  <div class="absolute hidden sm:flex right-8 -top-7 lg:-right-6 xl:right-8">
+  <div class="absolute hidden sm:flex right-8 -top-7 xl:right-8">
     <img class="size-48" [src]="product().urlImg" [alt]="product().name" />
     <div
       class="flex justify-center items-center size-12 absolute top-5 right-8 bg-gradient-to-tl from-yellow-500 to-yellow-300 rounded-full"
